  of the free direction integers as provided by Bratley and Fox, who
  credited unpublished work of Sobol' and Levitan.

- Added an implementation of Sobol sequences using the coefficients of
  the free direction integers of Lemieux, Cieslak, and
  Luttmer. Coefficients for d<=40 are the same as in Bradley-Fox. For
  dimension 40<d<=360 the coefficients have been calculated as optimal
  values based on the "resolution" criterion. The values has been
  provided by Christiane Lemieux, private communication, September
  2004.

- Average-price Asian pricers have been deprecated. New equivalent pricing
  engines added.

- Global evaluation date added through Settings class.  Used for
  index-fixing and exchange-rate lookup.

- TermStructure renamed to YieldTermStructure (the former name was
  deprecated)

- New base class BaseTermStructure which can calculate its reference
  date based on the global evaluation date.
  YieldTermStructure, BlackVolTermStructure, LocalVolTermStructure,
  CapFlatVolatilityStructure, CapletForwardVolatilityStructure, and
  SwaptionVolatilityStructure are now derived from BaseTermStructure
  so that they inherit its functionality.

- PathGenerator now works correctly with processes describing S
  instead of log S. Geometric Brownian process added (thanks to Walter
  Penschke.)

- Added N-dimensional cubic spline (thanks to Roman Gitlin.)

- IndexedCoupon can now take a generic index rather than a Libor
  (thanks to Daniele De Francesco.)

- Added hooks for convexity adjustment in floating-rate coupons;
  implemented adjustment for InArrearIndexedCoupon.

- Added nextDayOfWeekAfterDate() and nthDayOfWeekForMonthAndYear() static
  methods to the class Date. Added nextIMM() for the calculation of the next IMM
  date.

- Added WeekdayFormatter

- Added "1/1" day counter. The Actual365 is deprecated: as per ISDA
  documentation "Actual/365" is the same as "Actual/Actual". Use the
  ActualActual class instead, or the Actual365Fixed class.
  